vendor/pin-project-1.0.7/tests/ui/pin_project/project_replace_unsized.rs
use pin_project::pin_project;

#[pin_project(project_replace)] //~ ERROR E0277
struct Struct<T: ?Sized> {
    f: T,
}

#[pin_project(project_replace)] //~ ERROR E0277
struct TupleStruct<T: ?Sized>(T);

fn main() {}
